# BeeEngine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  README.org  Setup.py  flake.nix  linux_install.sh  macos_install.sh  shell.nix  vcpkg.json  windows_install.bat
Engine/: CMakeLists.txt
Engine/include/: BeeEngine.h
Engine/src/Core/: Application.cpp  Application.h  EntryPoint.h
Engine/src/Core/Logging/: Log.h
Engine/src/Windowing/: CrossPlatformWindow.h  Window.cpp  Window.h  WindowProperties.h
Engine/src/Windowing/WindowHandler/: GlfwWindowHandler.cpp  GlfwWindowHandler.h  WindowHandler.cpp  WindowHandler.h
src/Editor/: CMakeLists.txt  Start.cpp
src/Editor/Localization/: en.yaml  en_US.yaml  ru-RU.yaml  ru.yaml
src/Editor/src/: AssetScanner.cpp  AssetScanner.h  ConfigFile.cpp  ConfigFile.h  DockSpace.cpp  DockSpace.h  EditorApplication.cpp  EditorApplication.h  EditorLayer.cpp  EditorLayer.h  ImGuiNativeDragAndDrop.h  ProjectFile.cpp  ProjectFile.h  VSProjectGeneration.cpp  VSProjectGeneration.h  ViewPort.cpp  ViewPort.h
src/Editor/src/NativeScripting/: CodeGenerators.cpp  CodeGenerators.h  GameBuilder.cpp  GameBuilder.h  ScriptParser.cpp  ScriptParser.h  ScriptScanner.cpp  ScriptScanner.h  StdioLogSystem.cpp
src/Editor/src/Panels/: AssetEditPanel.cpp  AssetEditPanel.h  AssetPanel.cpp  AssetPanel.h  ContentBrowserPanel.cpp  ContentBrowserPanel.h  DockSpace.cpp  DockSpace.h  ImGuiOutputConsole.cpp  ImGuiOutputConsole.h  ImGuiUIEditor.cpp  ImGuiUIEditor.h  InspectorPanel.cpp  InspectorPanel.h  MenuBar.cpp  MenuBar.h  ProjectSettings.cpp  ProjectSettings.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  ViewPort.cpp  ViewPort.h
src/Engine/: CMakeLists.txt
src/Engine/Assets/: EmbeddedResources.cpp  EmbeddedResources.h
src/Engine/Assets/OpenSans/: OpenSans.h
src/Engine/Assets/Shaders/: InputStructures.glsl  MSDFGenerator.comp  Renderer2D_CircleShader.frag  Renderer2D_CircleShader.vert  Renderer2D_SpriteShader.frag  Renderer2D_SpriteShader.vert  Renderer_FontShader.frag  Renderer_FontShader.vert  Renderer_Framebuffer.frag  Renderer_Framebuffer.vert  Renderer_LineShader.frag  Renderer_LineShader.vert  Renderer_MeshDefaultShader.frag  Renderer_MeshDefaultShader.vert  Standart2DFragment.glsl  Standart2DVertex.glsl  VulkanTestShader.vert  WebGPUTestShader.frag  WebGPUTestShader.vert
src/Engine/Networking/: Connection.h
src/Engine/Networking/src/: Networking.cpp
src/Engine/cmake/: FileEmbed.cmake  InstallWebGPU.cmake  LinkMono.cmake  copy_headers.cmake  copy_headers.py  install_target_includes.cmake
src/Engine/cmake/PatchesForWebGPU/: Surface.cpp  Surface.h  printer_windows.cc
src/Engine/include/: BeeEngine.h
src/Engine/src/: BeeEngine.cpp  Hardware.cpp  Hardware.h  Iterator.h  KeyCodes.h  ObjectPool.cpp  ObjectPool.h  Property.h  StackTrace.cpp  StackTrace.h  TestCpp2.h2  TypeCase.h  source_location.h
src/Engine/src/Allocator/: Allocator.h  AllocatorStatistics.h
src/Engine/src/Core/: Application.cpp  Application.h  Casts.h  Color4.cpp  Color4.h  DeletionQueue.cpp  DeletionQueue.h  EntryPoint.cpp  EntryPoint.cpp2  EntryPoint.h  Environment.cpp  Environment.h  Event.h  Expected.h  Format.cpp  Format.h  FramePtr.cpp  FramePtr.h  GameConfig.cpp  GameConfig.h  Hash.cpp  Hash.h  Inlining.h  Input.cpp  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Move.h  Numbers.h  OsPlatform.h  Path.cpp  Path.h  Property.h  ReadOnly.cpp  ReadOnly.h  Reflection.cpp  Reflection.h  ResourceManager.cpp  (+16 more)
src/Engine/src/Debug/: DebugLayer.cpp  DebugLayer.h  DebugUtils.h  Instrumentor.h  MemoryProfiler.cpp  MemoryProfiler.h  OpenGLDebug.h  Timer.h
src/Engine/src/FileSystem/: File.cpp  File.h  FileStream.cpp  FileStream.h  FileSystem.h  FileWatcher.cpp  FileWatcher.h
src/Engine/src/Gui/: ImGuiFonts.h  MessageBox.cpp  MessageBox.h
src/Engine/src/JobSystem/: AdaptiveMutex.h  CancelationToken.h  InternalJobScheduler.cpp  InternalJobScheduler.h  JobScheduler.cpp  JobScheduler.h  JobSchedulerAdditional.cpp  Mutex.h  SpinLock.h
src/Engine/src/Locale/: ImGuiLocalizationPanel.cpp  ImGuiLocalizationPanel.h  Locale.cpp  Locale.h  LocalizationGenerator.cpp  LocalizationGenerator.h
src/Engine/src/Platform/: Platform.h  STDFileWatcher.cpp  STDFileWatcher.h
src/Engine/src/Renderer/: AssetManager.cpp  AssetManager.h  BindingSet.cpp  BindingSet.h  BufferLayout.cpp  BufferLayout.h  BufferLayoutSerializer.cpp  BufferLayoutSerializer.hpp  CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  DeviceID.cpp  DeviceID.h  EditorCamera.cpp  EditorCamera.h  Font.cpp  Font.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsBuffer.cpp  GraphicsBuffer.h  GraphicsDevice.cpp  GraphicsDevice.h  GraphicsQueue.cpp  GraphicsQueue.h  IBindable.h  Instance.cpp  Instance.h  InstancedBuffer.cpp  InstancedBuffer.h  MSDFData.h  Material.cpp  Material.h  MaterialData.h  MaterialDescriptor.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  (+45 more)
src/Engine/src/Scene/: Components.cpp  Components.h  DefaultNativeScript.h  Entity.cpp  Entity.h  EntityID.h  INativeScriptFactory.h  INativeScriptRegistry.h  NativeScriptFactory.cpp  NativeScriptFactory.h  Prefab.cpp  Prefab.h  Scene.cpp  Scene.h  (+6 more)
src/LocalizationTool/: CMakeLists.txt  Start.cpp
src/LocalizationTool/src/: LocalizationToolApplication.h  LocalizationToolLayer.cpp  LocalizationToolLayer.h
src/Runtime/: CMakeLists.txt  Start.cpp
src/Runtime/src/: DebugLayer.h  GameApplication.cpp  GameApplication.h  GameLayer.cpp  GameLayer.h
src/Sandbox2D/: CMakeLists.txt
src/Sandbox2D/src/: TestLayer.cpp  TestLayer.h  VulkanTestLayer.cpp  VulkanTestLayer.h  WebGPUTestLayer.cpp  WebGPUTestLayer.h  main.cpp
src/tests/: ApplicationInit.h  CMakeLists.txt  CodeSafetyCheck.cpp  FormatStringTest.cpp  GeneralPurposeAllocatorTest.cpp  HashTests.cpp  JobTests.cpp  LocaleTests.cpp  PropertyClassTest.cpp  StringTests.cpp  TestFileDialogs.cpp  ThreadPoolTest.cpp  TransformTests.cpp  TypeDefinesTests.cpp  tests_main.cpp
src/tests/RenderingTests/: GeneralRenderingTests.cpp  TextureTest.cpp
(+405 files in other folders)
